# tome2

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  ToME.sln  ToME.vcxproj  ToME.vcxproj.filters  readme.md  vcpkg.json
docs/wiki/: FrontPage.html
docs/wiki/BugReport/: BugReport1  BugReport10  BugReport100  BugReport101  BugReport102  BugReport103  BugReport104  BugReport104_2fspoiler  BugReport105  BugReport106  BugReport107  BugReport108  BugReport109  BugReport11  BugReport110  BugReport111  BugReport112  BugReport113  BugReport114  BugReport115  BugReport116  BugReport117  BugReport119  BugReport12  BugReport120  BugReport121  BugReport122  BugReport124  BugReport125  BugReport126  BugReport127  BugReport128  BugReport129  BugReport13  BugReport130  BugReport131  BugReport132  BugReport133  BugReport134  BugReport135  (+133 more)
docs/wiki/DayInTheLife/: DayInTheLifeArchive  DayInTheLifeArchive_2fBjorn_20the_20Beorning_20Warper  DayInTheLifeArchive_2fBlackwood  DayInTheLifeArchive_2fDay_20in_20the_20life_20of_20Sparky  DayInTheLifeArchive_2fLisa_20Alexander_2c_20the_20Human_20Mindcrafter  DayInTheLifeArchive_2fParallel_20Bjorn  DayInTheLifeArchive_2fSlappy  DayInTheLifeArchive_2fThe_20probably_20brief_20afterlife_20of_20Gumbo
docs/wiki/Documentation/: Documentation  Documentation_2fAutomatizer_20help  Documentation_2fBirth_20abilities  Documentation_2fBought_20abilities  Documentation_2fChangeLog  Documentation_2fCharacteristics  Documentation_2fClasses  Documentation_2fClasses_2fAlchemist  Documentation_2fClasses_2fArcher  Documentation_2fClasses_2fAssassin  Documentation_2fClasses_2fAxemaster  Documentation_2fClasses_2fDark_2dPriest  Documentation_2fClasses_2fDemonologist  Documentation_2fClasses_2fDruid  Documentation_2fClasses_2fGeomancer  Documentation_2fClasses_2fHaftedmaster  Documentation_2fClasses_2fLoremaster  Documentation_2fClasses_2fMage  Documentation_2fClasses_2fMindcrafter  Documentation_2fClasses_2fMonk  Documentation_2fClasses_2fNecromancer  Documentation_2fClasses_2fPaladin  Documentation_2fClasses_2fPolearmmaster  Documentation_2fClasses_2fPriest_28Eru_29  Documentation_2fClasses_2fPriest_28Manwe_29  Documentation_2fClasses_2fRanger  Documentation_2fClasses_2fRogue  Documentation_2fClasses_2fRunecrafter  Documentation_2fClasses_2fSorceror  Documentation_2fClasses_2fSummoner  Documentation_2fClasses_2fSwordmaster  Documentation_2fClasses_2fSymbiant  Documentation_2fClasses_2fThaumaturgist  Documentation_2fClasses_2fUnbeliever  Documentation_2fClasses_2fWarper  Documentation_2fClasses_2fWarrior  Documentation_2fCombinations_20of_20race_20and_20class  Documentation_2fContact_20information  Documentation_2fCreating_20a_20character  Documentation_2fDiscussion_2f2_2e3_20Documentation_20Question  (+71 more)
docs/wiki/GeneralDiscussion/: GeneralDiscussion  GeneralDiscussion_2f2_2e3_2e1_20for_20OSX  GeneralDiscussion_2fA_20bug_20is_20this_20how_20it_27s_20supposed_20to_20be_3f  GeneralDiscussion_2fArda_20musings  GeneralDiscussion_2fAre_20_28some_29_20staves_20underpowered_3f  GeneralDiscussion_2fArmor_20class_2e_2e_2e_20what_20exactly_20does_20it_20do_3f  GeneralDiscussion_2fArordowyr_20the_20Woodelf_20Junkart_20magnet  GeneralDiscussion_2fAssorted_20documentation_2drelated_20questions  GeneralDiscussion_2fC_27mon_20folks_2c_20post_21  GeneralDiscussion_2fCharacterSheet_20improvements  GeneralDiscussion_2fCompetition_20Idea  GeneralDiscussion_2fEffects_20of_20Range_20on_20Archery  GeneralDiscussion_2fForum_20trouble  GeneralDiscussion_2fForum_20trouble_20v2  GeneralDiscussion_2fFullscreen_20mode_20in_20Windows  GeneralDiscussion_2fGeneral_20Discussion_20here_20versus_20on_20the_20forum  GeneralDiscussion_2fHelp_20with_20Mimics  GeneralDiscussion_2fHoly_20COW_20_2d_20wild_20find  GeneralDiscussion_2fHow_20to_20post_20your_20character_20sheet_20on_20the_20wiki  GeneralDiscussion_2fIn_20cheering_2c_20and_20slightly_20OT_20news_2e_2e_2e  GeneralDiscussion_2fJust_20being_20curious_2e_2e_20Why_20there_20are_20only_202_20ring_20slots_3f  GeneralDiscussion_2fLucky_20Escapes  GeneralDiscussion_2fMacros_20and_20stuff_20exchange  GeneralDiscussion_2fMonster_20to_20Character  GeneralDiscussion_2fMy_20Newbie_20Guide  GeneralDiscussion_2fMy_20current_202_2e3_20char  GeneralDiscussion_2fNegative_20skill_20potential_20quirks  GeneralDiscussion_2fNightly_20compiles_20not_20working_3f  GeneralDiscussion_2fQuestion_20about_20totems  GeneralDiscussion_2fRather_20Repetitive_20Quests  GeneralDiscussion_2fRunecraft_20is_20currently_20broken  GeneralDiscussion_2fSome_20general_20questions_20on_20classes_20and_20characters  GeneralDiscussion_2fStealth_20and_20Aggravation  GeneralDiscussion_2fStealth_20and_20Range  GeneralDiscussion_2fStealth_20and_20stealth_20equipment  GeneralDiscussion_2fStupid_202_2e3_20question_2e_2e_2e  GeneralDiscussion_2fSymbiant_20fun  GeneralDiscussion_2fSymbiosis_20_2d_20Help  GeneralDiscussion_2fThat_20negative_20stat_20bug  GeneralDiscussion_2fThings_20that_20affect_20barehand_3f  (+6 more)
docs/wiki/IdeaArchive/: IdeaArchive  IdeaArchive_2fA_20little_20bit_20poisoned_3f  IdeaArchive_2fAtmosphere_3a_20Item_20history  IdeaArchive_2fColor_20coded_20level_20feelings  IdeaArchive_2fDark_20weaponry  IdeaArchive_2fDe_2dcheesing_20Summoners  IdeaArchive_2fDisplay_20Kill_20Count_20rejiggering  IdeaArchive_2fExpand_20level_20feelings  IdeaArchive_2fFiery_20Shield_3a_20Slight_20Change  IdeaArchive_2fInterface_20_2d_20Racial_20Powers  IdeaArchive_2fItems_20and_20Skills_20_2along_2a  IdeaArchive_2fJunkart_20rejiggering  IdeaArchive_2fLight_20the_20shops  IdeaArchive_2fLost_20soul_20as_20an_20option  IdeaArchive_2fMaps_20and_20Dungeons  IdeaArchive_2fMinor_20Idea_3a_20Maia  IdeaArchive_2fMinor_20Name_20Changes  IdeaArchive_2fMissing_20descriptions  IdeaArchive_2fModule_20Makers_20Handbook  IdeaArchive_2fPokemod  (+34 more)
lib/: CMakeLists.txt
lib/pref/: font-win.prf
src/: CMakeLists.txt  angband.h  cmd4.c  config.h  externs.h  files.c  h-config.h  h-system.h  h-type.h  init2.c  main-crb.c  main-sdl.c  main-win.c  main.c  modules.c  readdib.c  util.c  variable.c  z-term.c
(+407 files in other folders)
