# Project definition.
CMAKE_MINIMUM_REQUIRED (VERSION 3.5)
PROJECT (tome2)

message(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")

# no idea.
ADD_DEFINITIONS(-DUSE_PRECISE_CMOVIE)

# add location vcpkg installed libs
set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} "${projectDir}/vcpkg_installed/x86-windows")

# JSON support
FIND_PACKAGE(JANSSON CONFIG REQUIRED)
set(LIBS ${LIBS} jansson::jansson)

# SDL support
FIND_PACKAGE(SDL2 CONFIG REQUIRED)
FIND_PACKAGE(SDL2_image CONFIG REQUIRED)
FIND_PACKAGE(SDL2_ttf CONFIG REQUIRED)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIR})
set(LIBS ${LIBS} SDL2::SDL2 SDL2_image::SDL2_image SDL2_ttf::SDL2_ttf)
ADD_DEFINITIONS(-DUSE_SDL)

# Windows support
SET(EXECUTABLE_OPTIONS WIN32)
SET(LIBS ${LIBS} winmm wsock32)

# Add the source subdirectory.
ADD_SUBDIRECTORY(src)
